# global_market_lead_lag

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_strategy_backtest.ipynb
reports/: summary.md
reports/tables/: baseline_regression.csv  cost_sensitivity.csv  directional_correlations.csv  strategy_variants.csv  test_diagnostics.csv  test_results.csv  tradable_dataset.csv  validation_results.csv  walk_forward_diagnostics.csv  walk_forward_folds.csv  walk_forward_returns.csv  walk_forward_selection_counts.csv  walk_forward_summary.csv  walk_forward_yearly.csv
scripts/: run_research.py
src/global_market_lead_lag/: __init__.py  backtest.py  config.py  data.py  metrics.py  models.py  pipeline.py  plots.py  signals.py
tests/: conftest.py  test_backtest.py  test_metrics.py  test_signals.py
